// Protocol of data exchange between nodes.
// Extended version of https://github.com/ipfs/specs/blob/main/BITSWAP.md

syntax = "proto3";

package blockexc.message.pb;

message Message {

  message Wantlist {
    enum WantType {
      wantBlock = 0;
      wantHave = 1;
    }

    message Entry {
      bytes block = 1;       // the block cid
      int32 priority = 2;    // the priority (normalized). default to 1
      bool cancel = 3;       // whether this revokes an entry
      WantType wantType = 4; // Note: defaults to enum 0, ie Block
      bool sendDontHave = 5; // Note: defaults to false
      // Neverust extension: Range retrieval for partial blocks
      uint64 startByte = 6;  // Starting byte offset (inclusive), 0 = from beginning
      uint64 endByte = 7;    // Ending byte offset (exclusive), 0 = full block
                             // If both are 0 (default), requests full block (backward compatible)
    }

    repeated Entry entries = 1;  // a list of wantlist entries
    bool full = 2;               // whether this is the full wantlist. default to false
  }

  message Block {
    bytes prefix = 1; // CID prefix (cid version, multicodec and multihash prefix (type + length)
    bytes data = 2;
    // Neverust extension: Range response metadata for partial blocks
    uint64 rangeStart = 3;  // Starting byte offset of this data slice (inclusive)
    uint64 rangeEnd = 4;    // Ending byte offset of this data slice (exclusive)
    uint64 totalSize = 5;   // Total size of the complete block
                            // If all are 0 (default), this is a full block (backward compatible)
  }

  enum BlockPresenceType {
    presenceHave = 0;
    presenceDontHave = 1;
  }

  message BlockPresence {
    bytes cid = 1;
    BlockPresenceType type = 2;
    bytes price = 3;    // Amount of assets to pay for the block (UInt256)
  }

  message AccountMessage {
    bytes address = 1; // Ethereum address to which payments should be made
  }

  message StateChannelUpdate {
    bytes update = 1; // Signed Nitro state, serialized as JSON
  }

  Wantlist wantlist = 1;
  repeated Block payload = 3;
  repeated BlockPresence blockPresences = 4;
  int32 pendingBytes = 5;
  AccountMessage account = 6;
  StateChannelUpdate payment = 7;
}
